--- a/index.html
+++ b/index.html
@@ -1,11 +1,7 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>tbc</title>
-  </head>
-  <body>
-    <h1>Header 1</h1>
-  </body>
-</html>
+---
+# front matter
+layout: default
+title: Home
+---
+
+<h1>{{ "Hello World!" | downcase }}</h1>
