--- a/index.html
+++ b/index.html
@@ -1,5 +1,167 @@
 ---
-title: Home
+title: home
 ---
+<h1>hey mate</h1>
 
-<h1>{{ "Hello World!" | downcase }}</h1>
+<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+	 viewBox="0 0 640 640" style="enable-background:new 0 0 640 640;" xml:space="preserve">
+	<style type="text/css">
+		.st0{fill:none;stroke:#000000;stroke-miterlimit:10;}
+		.st1{stroke:#000000;stroke-width:0.5;stroke-linecap:round;stroke-linejoin:round;}
+		.st2{fill:#555555;}
+		.st3{fill:none;stroke:#000000;stroke-width:2;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:10;}
+		.st4{fill:#FFFFFF;}
+		.st5{fill:none;stroke:#000000;stroke-width:3;stroke-linecap:round;stroke-linejoin:round;}
+		.st6{fill:none;stroke:#000000;stroke-width:2;stroke-linecap:round;stroke-linejoin:round;}
+		.st7{fill:#CD1C24;}
+		.st8{opacity:0.5;}
+		.st9{fill:none;stroke:#000000;stroke-linecap:round;stroke-linejoin:round;}
+	</style>
+	<g class="st8 zzz-1">
+		<path class="st2 theme-colour-background" d="M585.5,173.4c-7.5-3.9-16.3-5.4-24.7-4.3c-1.3,0.2-2.7,0.4-3.8,1.3c-1.1,0.8-1.7,2.4-1.1,3.6
+			c0.3,0.6,0.9,1.1,1.5,1.5c8.3,5.6,19.1,5.9,28.6,9.1c1.7,0.6,3.8,1.8,3.4,3.6c-0.3,1.6-2.1,2.2-3.7,2.5
+			c-12.3,2.5-24.9,4.2-36.7,8.4c-2.7,1-5.6,2.2-7.1,4.7c-0.4,0.7-0.7,1.5-0.6,2.3c0.1,1.1,0.9,2,1.6,2.8c4.5,4.5,10.5,7.3,16.5,9.2
+			c6.1,1.9,12.4,3.2,18.4,5.2c4.3,1.5,8.6,3.4,13.2,3.8c0.5,0,1.1,0,1.4-0.4c0.1-0.2,0.1-0.4,0.1-0.6c0.1-4.4-2.7-8.4-6.3-10.9
+			c-3.6-2.5-7.9-3.7-12.1-4.8c-4.2-1-8.6-2-12.4-4.1c-0.3-0.2-0.6-0.4-0.7-0.7c-0.2-0.6,0.6-1.1,1.2-1.3c3.5-1.1,7.3-1.5,10.9-2.1
+			c9.2-1.6,18-4.7,26.2-9.1c1.6-0.8,3.3-2,3.5-3.7c0.1-0.9-0.2-1.8-0.6-2.6c-3.3-7.3-10.9-11.7-18.7-13.7"/>
+		<g>
+			<path class="st2 theme-colour-background" d="M586.3,172.1c-4.7-2.4-9.7-3.9-14.9-4.6c-2.6-0.3-5.3-0.4-7.9-0.2c-2.3,0.2-5,0.3-7,1.6
+				c-1.8,1.2-2.8,3.5-1.9,5.6c0.9,2,3.5,3.1,5.3,4.1c4.4,2.2,9.3,3.4,14.1,4.4c2.4,0.5,4.9,1,7.3,1.7c1.9,0.5,4.7,0.9,6.2,2.3
+				c1.8,1.6-2,2.2-3,2.4c-2.8,0.6-5.6,1.1-8.3,1.6c-5.6,1-11.1,2.1-16.6,3.4c-2.7,0.7-5.5,1.4-8.2,2.3c-2.3,0.7-4.6,1.5-6.7,2.6
+				c-1.9,1.1-3.7,2.6-4.5,4.7c-0.9,2.4,0.3,4.4,2,6.1c3.6,3.5,8,5.9,12.6,7.7c5.1,2,10.4,3.2,15.6,4.6c2.7,0.7,5.3,1.5,8,2.4
+				c2.6,0.9,5.2,2,7.8,2.7c1.3,0.4,2.6,0.6,4,0.8c1.1,0.1,2.3,0.2,3.1-0.6c1.6-1.4,0.6-4.8,0-6.4c-1.7-4.5-5.5-7.8-9.8-9.8
+				c-4.8-2.2-10-3-15.1-4.5c-1.3-0.4-2.6-0.8-3.8-1.3c-0.5-0.2-1.1-0.6-1.7-0.8c-0.1,0-0.1-0.1-0.2-0.1c-0.4-0.3-0.5,0-0.2,0.7
+				c0,0,1.1-0.3,1.1-0.3c2.7-0.7,5.5-1.1,8.2-1.6c5.4-0.9,10.6-2.1,15.7-3.9c2.5-0.9,4.9-1.9,7.4-3c2.3-1,4.8-2.1,6.9-3.6
+				c1.9-1.4,3.1-3.4,2.5-5.8c-0.5-2.2-2-4.3-3.4-6c-2.8-3.5-6.6-6-10.6-7.8c-2-0.9-4.1-1.6-6.3-2.2c-1.9-0.5-2.7,2.4-0.8,2.9
+				c4.1,1.1,8,2.7,11.4,5.2c1.6,1.2,3.1,2.6,4.3,4.3c1,1.3,3.1,4.1,2.3,5.7c-0.4,0.8-1.3,1.4-2.1,1.8c-1.1,0.6-2.2,1.2-3.3,1.7
+				c-2.3,1.2-4.7,2.2-7.2,3.1c-4.7,1.8-9.6,3.2-14.5,4.1c-2.5,0.5-5,0.8-7.5,1.3c-1.2,0.2-2.4,0.5-3.6,0.8c-1,0.3-2.1,0.5-2.8,1.3
+				c-3.6,3.8,7.3,6.4,9.4,6.9c4.8,1.2,9.8,2.1,14.1,4.5c3.7,2,7.1,5.6,7.4,10c0,0.1,0,0.8,0,0.8c0.1-0.1,0.1-0.1,0.2-0.2
+				c0.3-0.2,0.2-0.3-0.1-0.2c-0.5-0.2-1.4-0.2-1.9-0.2c-1.3-0.2-2.5-0.6-3.8-1c-2.4-0.8-4.8-1.7-7.2-2.5c-5.1-1.7-10.3-2.9-15.4-4.3
+				c-4.5-1.3-9-2.8-13.1-5.3c-2-1.2-3.8-2.5-5.4-4.1c-0.6-0.6-1.6-1.4-1.5-2.4c0.1-1.1,1.1-2.1,1.9-2.7c1.7-1.4,3.8-2.1,5.8-2.7
+				c2.5-0.8,4.9-1.6,7.4-2.2c5-1.3,10.1-2.3,15.2-3.3c2.6-0.5,5.3-1,7.9-1.5c2.2-0.4,4.7-0.7,6.8-1.5c1.7-0.7,3.2-2.1,3.1-4.1
+				c-0.1-2-1.9-3.3-3.6-4.1c-4.1-1.8-8.8-2.5-13.1-3.4c-4.4-1-8.9-2-13-4c-1.2-0.6-5-2-3.9-3.8c1-1.8,4.5-1.7,6.3-1.8
+				c4.8-0.3,9.7,0.3,14.3,1.7c2.3,0.7,4.6,1.6,6.7,2.7C586.5,175.6,588,173,586.3,172.1L586.3,172.1z"/>
+		</g>
+	</g>
+  <g class="st8 zzz-2">
+    <path class="st2 theme-colour-background" d="M585.5,173.4c-7.5-3.9-16.3-5.4-24.7-4.3c-1.3,0.2-2.7,0.4-3.8,1.3c-1.1,0.8-1.7,2.4-1.1,3.6
+      c0.3,0.6,0.9,1.1,1.5,1.5c8.3,5.6,19.1,5.9,28.6,9.1c1.7,0.6,3.8,1.8,3.4,3.6c-0.3,1.6-2.1,2.2-3.7,2.5
+      c-12.3,2.5-24.9,4.2-36.7,8.4c-2.7,1-5.6,2.2-7.1,4.7c-0.4,0.7-0.7,1.5-0.6,2.3c0.1,1.1,0.9,2,1.6,2.8c4.5,4.5,10.5,7.3,16.5,9.2
+      c6.1,1.9,12.4,3.2,18.4,5.2c4.3,1.5,8.6,3.4,13.2,3.8c0.5,0,1.1,0,1.4-0.4c0.1-0.2,0.1-0.4,0.1-0.6c0.1-4.4-2.7-8.4-6.3-10.9
+      c-3.6-2.5-7.9-3.7-12.1-4.8c-4.2-1-8.6-2-12.4-4.1c-0.3-0.2-0.6-0.4-0.7-0.7c-0.2-0.6,0.6-1.1,1.2-1.3c3.5-1.1,7.3-1.5,10.9-2.1
+      c9.2-1.6,18-4.7,26.2-9.1c1.6-0.8,3.3-2,3.5-3.7c0.1-0.9-0.2-1.8-0.6-2.6c-3.3-7.3-10.9-11.7-18.7-13.7"/>
+    <g>
+      <path class="st2 theme-colour-background" d="M586.3,172.1c-4.7-2.4-9.7-3.9-14.9-4.6c-2.6-0.3-5.3-0.4-7.9-0.2c-2.3,0.2-5,0.3-7,1.6
+        c-1.8,1.2-2.8,3.5-1.9,5.6c0.9,2,3.5,3.1,5.3,4.1c4.4,2.2,9.3,3.4,14.1,4.4c2.4,0.5,4.9,1,7.3,1.7c1.9,0.5,4.7,0.9,6.2,2.3
+        c1.8,1.6-2,2.2-3,2.4c-2.8,0.6-5.6,1.1-8.3,1.6c-5.6,1-11.1,2.1-16.6,3.4c-2.7,0.7-5.5,1.4-8.2,2.3c-2.3,0.7-4.6,1.5-6.7,2.6
+        c-1.9,1.1-3.7,2.6-4.5,4.7c-0.9,2.4,0.3,4.4,2,6.1c3.6,3.5,8,5.9,12.6,7.7c5.1,2,10.4,3.2,15.6,4.6c2.7,0.7,5.3,1.5,8,2.4
+        c2.6,0.9,5.2,2,7.8,2.7c1.3,0.4,2.6,0.6,4,0.8c1.1,0.1,2.3,0.2,3.1-0.6c1.6-1.4,0.6-4.8,0-6.4c-1.7-4.5-5.5-7.8-9.8-9.8
+        c-4.8-2.2-10-3-15.1-4.5c-1.3-0.4-2.6-0.8-3.8-1.3c-0.5-0.2-1.1-0.6-1.7-0.8c-0.1,0-0.1-0.1-0.2-0.1c-0.4-0.3-0.5,0-0.2,0.7
+        c0,0,1.1-0.3,1.1-0.3c2.7-0.7,5.5-1.1,8.2-1.6c5.4-0.9,10.6-2.1,15.7-3.9c2.5-0.9,4.9-1.9,7.4-3c2.3-1,4.8-2.1,6.9-3.6
+        c1.9-1.4,3.1-3.4,2.5-5.8c-0.5-2.2-2-4.3-3.4-6c-2.8-3.5-6.6-6-10.6-7.8c-2-0.9-4.1-1.6-6.3-2.2c-1.9-0.5-2.7,2.4-0.8,2.9
+        c4.1,1.1,8,2.7,11.4,5.2c1.6,1.2,3.1,2.6,4.3,4.3c1,1.3,3.1,4.1,2.3,5.7c-0.4,0.8-1.3,1.4-2.1,1.8c-1.1,0.6-2.2,1.2-3.3,1.7
+        c-2.3,1.2-4.7,2.2-7.2,3.1c-4.7,1.8-9.6,3.2-14.5,4.1c-2.5,0.5-5,0.8-7.5,1.3c-1.2,0.2-2.4,0.5-3.6,0.8c-1,0.3-2.1,0.5-2.8,1.3
+        c-3.6,3.8,7.3,6.4,9.4,6.9c4.8,1.2,9.8,2.1,14.1,4.5c3.7,2,7.1,5.6,7.4,10c0,0.1,0,0.8,0,0.8c0.1-0.1,0.1-0.1,0.2-0.2
+        c0.3-0.2,0.2-0.3-0.1-0.2c-0.5-0.2-1.4-0.2-1.9-0.2c-1.3-0.2-2.5-0.6-3.8-1c-2.4-0.8-4.8-1.7-7.2-2.5c-5.1-1.7-10.3-2.9-15.4-4.3
+        c-4.5-1.3-9-2.8-13.1-5.3c-2-1.2-3.8-2.5-5.4-4.1c-0.6-0.6-1.6-1.4-1.5-2.4c0.1-1.1,1.1-2.1,1.9-2.7c1.7-1.4,3.8-2.1,5.8-2.7
+        c2.5-0.8,4.9-1.6,7.4-2.2c5-1.3,10.1-2.3,15.2-3.3c2.6-0.5,5.3-1,7.9-1.5c2.2-0.4,4.7-0.7,6.8-1.5c1.7-0.7,3.2-2.1,3.1-4.1
+        c-0.1-2-1.9-3.3-3.6-4.1c-4.1-1.8-8.8-2.5-13.1-3.4c-4.4-1-8.9-2-13-4c-1.2-0.6-5-2-3.9-3.8c1-1.8,4.5-1.7,6.3-1.8
+        c4.8-0.3,9.7,0.3,14.3,1.7c2.3,0.7,4.6,1.6,6.7,2.7C586.5,175.6,588,173,586.3,172.1L586.3,172.1z"/>
+    </g>
+  </g>
+  <g class="st8 zzz-3">
+    <path class="st2 theme-colour-background" d="M585.5,173.4c-7.5-3.9-16.3-5.4-24.7-4.3c-1.3,0.2-2.7,0.4-3.8,1.3c-1.1,0.8-1.7,2.4-1.1,3.6
+      c0.3,0.6,0.9,1.1,1.5,1.5c8.3,5.6,19.1,5.9,28.6,9.1c1.7,0.6,3.8,1.8,3.4,3.6c-0.3,1.6-2.1,2.2-3.7,2.5
+      c-12.3,2.5-24.9,4.2-36.7,8.4c-2.7,1-5.6,2.2-7.1,4.7c-0.4,0.7-0.7,1.5-0.6,2.3c0.1,1.1,0.9,2,1.6,2.8c4.5,4.5,10.5,7.3,16.5,9.2
+      c6.1,1.9,12.4,3.2,18.4,5.2c4.3,1.5,8.6,3.4,13.2,3.8c0.5,0,1.1,0,1.4-0.4c0.1-0.2,0.1-0.4,0.1-0.6c0.1-4.4-2.7-8.4-6.3-10.9
+      c-3.6-2.5-7.9-3.7-12.1-4.8c-4.2-1-8.6-2-12.4-4.1c-0.3-0.2-0.6-0.4-0.7-0.7c-0.2-0.6,0.6-1.1,1.2-1.3c3.5-1.1,7.3-1.5,10.9-2.1
+      c9.2-1.6,18-4.7,26.2-9.1c1.6-0.8,3.3-2,3.5-3.7c0.1-0.9-0.2-1.8-0.6-2.6c-3.3-7.3-10.9-11.7-18.7-13.7"/>
+    <g>
+      <path class="st2 theme-colour-background" d="M586.3,172.1c-4.7-2.4-9.7-3.9-14.9-4.6c-2.6-0.3-5.3-0.4-7.9-0.2c-2.3,0.2-5,0.3-7,1.6
+        c-1.8,1.2-2.8,3.5-1.9,5.6c0.9,2,3.5,3.1,5.3,4.1c4.4,2.2,9.3,3.4,14.1,4.4c2.4,0.5,4.9,1,7.3,1.7c1.9,0.5,4.7,0.9,6.2,2.3
+        c1.8,1.6-2,2.2-3,2.4c-2.8,0.6-5.6,1.1-8.3,1.6c-5.6,1-11.1,2.1-16.6,3.4c-2.7,0.7-5.5,1.4-8.2,2.3c-2.3,0.7-4.6,1.5-6.7,2.6
+        c-1.9,1.1-3.7,2.6-4.5,4.7c-0.9,2.4,0.3,4.4,2,6.1c3.6,3.5,8,5.9,12.6,7.7c5.1,2,10.4,3.2,15.6,4.6c2.7,0.7,5.3,1.5,8,2.4
+        c2.6,0.9,5.2,2,7.8,2.7c1.3,0.4,2.6,0.6,4,0.8c1.1,0.1,2.3,0.2,3.1-0.6c1.6-1.4,0.6-4.8,0-6.4c-1.7-4.5-5.5-7.8-9.8-9.8
+        c-4.8-2.2-10-3-15.1-4.5c-1.3-0.4-2.6-0.8-3.8-1.3c-0.5-0.2-1.1-0.6-1.7-0.8c-0.1,0-0.1-0.1-0.2-0.1c-0.4-0.3-0.5,0-0.2,0.7
+        c0,0,1.1-0.3,1.1-0.3c2.7-0.7,5.5-1.1,8.2-1.6c5.4-0.9,10.6-2.1,15.7-3.9c2.5-0.9,4.9-1.9,7.4-3c2.3-1,4.8-2.1,6.9-3.6
+        c1.9-1.4,3.1-3.4,2.5-5.8c-0.5-2.2-2-4.3-3.4-6c-2.8-3.5-6.6-6-10.6-7.8c-2-0.9-4.1-1.6-6.3-2.2c-1.9-0.5-2.7,2.4-0.8,2.9
+        c4.1,1.1,8,2.7,11.4,5.2c1.6,1.2,3.1,2.6,4.3,4.3c1,1.3,3.1,4.1,2.3,5.7c-0.4,0.8-1.3,1.4-2.1,1.8c-1.1,0.6-2.2,1.2-3.3,1.7
+        c-2.3,1.2-4.7,2.2-7.2,3.1c-4.7,1.8-9.6,3.2-14.5,4.1c-2.5,0.5-5,0.8-7.5,1.3c-1.2,0.2-2.4,0.5-3.6,0.8c-1,0.3-2.1,0.5-2.8,1.3
+        c-3.6,3.8,7.3,6.4,9.4,6.9c4.8,1.2,9.8,2.1,14.1,4.5c3.7,2,7.1,5.6,7.4,10c0,0.1,0,0.8,0,0.8c0.1-0.1,0.1-0.1,0.2-0.2
+        c0.3-0.2,0.2-0.3-0.1-0.2c-0.5-0.2-1.4-0.2-1.9-0.2c-1.3-0.2-2.5-0.6-3.8-1c-2.4-0.8-4.8-1.7-7.2-2.5c-5.1-1.7-10.3-2.9-15.4-4.3
+        c-4.5-1.3-9-2.8-13.1-5.3c-2-1.2-3.8-2.5-5.4-4.1c-0.6-0.6-1.6-1.4-1.5-2.4c0.1-1.1,1.1-2.1,1.9-2.7c1.7-1.4,3.8-2.1,5.8-2.7
+        c2.5-0.8,4.9-1.6,7.4-2.2c5-1.3,10.1-2.3,15.2-3.3c2.6-0.5,5.3-1,7.9-1.5c2.2-0.4,4.7-0.7,6.8-1.5c1.7-0.7,3.2-2.1,3.1-4.1
+        c-0.1-2-1.9-3.3-3.6-4.1c-4.1-1.8-8.8-2.5-13.1-3.4c-4.4-1-8.9-2-13-4c-1.2-0.6-5-2-3.9-3.8c1-1.8,4.5-1.7,6.3-1.8
+        c4.8-0.3,9.7,0.3,14.3,1.7c2.3,0.7,4.6,1.6,6.7,2.7C586.5,175.6,588,173,586.3,172.1L586.3,172.1z"/>
+    </g>
+  </g>
+	<g id="XMLID_6_">
+		<g>
+			<path d="M601.7,291.3l-0.7,0c-5.6,0.4-10.2-3-11.3-6.4c-1.1-3.4,0-6.9-0.2-10.4l0.1-0.3c1.1,0.5,2.1,1,2.8,1.4
+				C598.8,279.4,601.4,285.2,601.7,291.3z"/>
+			<path class="st4" d="M488.5,318c22.7,31.8,31.7,79.6,22.1,120.6c-1.5,6.6-4.1,13.8-9.3,15.9c-4.4,1.8-9.2-0.9-12.3-5.2
+				c-3-4.3-4.6-9.9-5.8-15.5c-3.9-17.9-5-36.7-8.9-54.6c-3.9-17.9-11.2-35.8-24-45.2c-4.5-3.3-9.6-5.5-14.6-7.4
+				c-6.1-2.3-12.2-4.4-18.3-6.3c-0.1-0.2-0.2-0.3-0.4-0.5L488.5,318z"/>
+			<path class="st4" d="M470.4,241.9l27,3.8C488.3,245.6,478.9,245.5,470.4,241.9z"/>
+			<path class="st4" d="M461.2,409.8c0.3,12.1,0.1,24.3-0.6,36.4c-0.4,6.6-1.1,13.7-4.8,18.3c-5.4,6.9-15,4.7-20.6-1.9
+				s-8.2-16.3-10.5-25.6c-3.4-13.4-6.8-26.8-10.3-40.3c-2.3-9-4.6-18.1-8.6-26c-11.9-23.4-35.1-31.4-56.2-37.6l60.1-21.4
+				c2.5,2.6,5,5.4,7.4,8.1l-1,0c0.5,0.1,1,0.3,1.4,0.4c12.8,14.8,24.1,31.6,33.7,49.9c3.3,6.4,6.5,13,8.2,20.3
+				C460.7,396.8,461,403.4,461.2,409.8z"/>
+			<path class="st4" d="M425.4,294.8c-12.2,4.6-25.4,5.1-38,2.9c-8.2-1.4-17.5-5.2-20.6-15.2c-3.1-10.2,1.9-21.3,7.2-29.9
+				c9.5-15.5,20.5-29.4,32.8-41.4c0.1-0.1,0.1-0.1,0.2-0.2c7.7-7.5,16.5-14.5,26.1-15c0.6,0,1.1,0,1.7,0l26.2,64.5
+				c-7,15.6-18.9,26.9-32.1,32.8C427.7,293.9,426.6,294.3,425.4,294.8z"/>
+			<path class="st4" d="M417,319.9c0.1,0.1,0.3,0.3,0.4,0.5c-0.5-0.1-1-0.3-1.4-0.4L417,319.9z"/>
+			<path class="st4" d="M406.5,211l-215.6,49c-0.6-3.6-1.4-7.1-2.4-10.5l-18.3,15.2L11.6,300.8c1-3.5,2.2-7,3.4-10.4
+				c9.9-26.6,27.2-50.2,46.3-71c5-5.5,10.5-10.7,17.1-14.1c6.6-3.4,14-5.1,21.3-6.2c15.9-2.4,32.2-2.2,48,1.3
+				c15.9,3.5,30.1,11.3,45.4,16.6c15,5.1,81.7,10.4,98.4,9.1C308.2,224.7,389.7,210.2,406.5,211z"/>
+			<path class="st4" d="M349.4,333.7c-19.3,0.5-38.5,1.1-57.8,1.6c-24.8,0.7-49.6,1.3-74.3-0.1c0.1-2-0.9-4.3-2.5-6.3L349.4,333.7z"
+				/>
+			<path class="st4" d="M214.8,328.9c1.6,2,2.6,4.3,2.5,6.3c-6.9-0.4-13.8-0.9-20.7-1.7c-7.1-0.8-14.3-1.8-20.6-6L214.8,328.9z"/>
+			<path class="st4" d="M214.8,328.9l-38.8-1.4c6.3,4.1,13.5,5.2,20.6,6c6.9,0.8,13.8,1.3,20.7,1.7c-0.1,2.6-2.1,4.8-7,5.1
+				c-9.8,0.7-20.3-0.1-30.1-0.3c-10.8-0.3-21.7-0.5-32.5-1.4c-21.2-1.8-42.6-6.5-58.2-19c-6.3-5-9.6-11.1-14.9-16.7
+				c-1.2-1.3-2.5-2.1-3.8-2.7l57.4-0.7c0.1,0,0.1,0.1,0.2,0.1c19.2,10.9,44.1,8.9,65.1,16.2c7.4,2.6,15,6.5,20.2,11.7
+				C214,328,214.4,328.4,214.8,328.9z"/>
+			<path class="st4" d="M190.9,260c1.3,8,1.4,16.3,0.3,24.4c-0.4,3.2-1.1,6.4-2.4,9c-1.2,2.3-2.8,4-4.5,5.4c-6.2,5-13.8,5.6-21,5.5
+				c-11.8-0.1-23.5-1.7-35.1-4.8l41.9-34.8L190.9,260z"/>
+			<path class="st4" d="M190.9,260l-20.8,4.7l18.3-15.2C189.6,252.9,190.4,256.4,190.9,260z"/>
+			<path class="st4" d="M96.9,385.5l-0.6,1.1l-12.3,9.1c-1.9,0.1-3.9,0.3-5.8,0.5c-0.9,0.1-1.8,0.1-2.5,0.6c-1,0.6-1.6,1.7-1.8,2.9
+				c-0.2,1.1-0.1,2.3,0.1,3.5l-0.1,0.2c-2.8-1.1-5.6-2.2-8.4-3.4c-4.1-1.8-8.1-3.7-12.1-5.7c-9.8-4.9-19.3-10.3-27.1-17.2
+				c-7.8-6.8-14-15.2-16-24.3c-1.1-4.9-2.8-22.6-2.7-28.8c0.1-5.9,1.6-17.4,4-23h0.1l52.7-0.7c-2.2,0.9-4.3,2.6-6,4.8l-1.7,2.9
+				c-8.7,18-6.2,54,31.5,72.9C91.3,382.5,94.2,384,96.9,385.5z"/>
+			<path class="st4" d="M96.3,386.6c0.8,2.8-1.1,5.8-3.7,7.2c-2.5,1.4-5.6,1.7-8.5,1.9c-0.1,0-0.1,0-0.2,0L96.3,386.6z"/>
+			<path class="st4" d="M70.7,300.2l-6.4,0.1C66.4,299.5,68.6,299.4,70.7,300.2z"/>
+		</g>
+		<g>
+			<path class="st9" d="M417,319.9c-2.4-2.8-4.9-5.5-7.4-8.1"/>
+			<path class="st9" d="M349.6,333.2c21.1,6.2,44.4,14.2,56.2,37.6c4,7.9,6.4,17,8.6,26c3.4,13.4,6.8,26.8,10.3,40.3
+				c2.4,9.3,5,19,10.5,25.6s15.2,8.8,20.6,1.9c3.6-4.6,4.4-11.8,4.8-18.3c0.7-12.1,0.9-24.3,0.6-36.4c-0.2-6.5-0.5-13-1.9-19.2
+				c-1.7-7.4-4.8-14-8.2-20.3c-9.6-18.3-21-35.1-33.7-49.9"/>
+			<path class="st9" d="M416,320c0.5,0.1,1,0.3,1.4,0.4c6.2,1.8,12.3,3.9,18.3,6.3c5,1.9,10.1,4.1,14.6,7.4
+				c12.7,9.4,20.1,27.3,24,45.2c3.9,17.9,5,36.7,8.9,54.6c1.2,5.6,2.8,11.2,5.8,15.5c3.1,4.3,8,6.9,12.3,5.2
+				c5.2-2.1,7.8-9.3,9.3-15.9c9.5-41.1,0.6-88.9-22.1-120.6"/>
+			<path class="st9" d="M589.5,274.5c0.2,3.5-0.9,7,0.2,10.4c1.1,3.4,5.7,6.8,11.3,6.4"/>
+			<path class="st9" d="M434.7,196c-0.6,0-1.1,0-1.7,0c-9.6,0.5-18.4,7.5-26.1,15c-0.1,0.1-0.1,0.1-0.2,0.2
+				c-12.2,11.9-23.2,25.9-32.8,41.4c-5.3,8.6-10.3,19.7-7.2,29.9c3.1,9.9,12.4,13.7,20.6,15.2c12.7,2.2,25.8,1.7,38-2.9
+				c1.1-0.4,2.2-0.9,3.3-1.4c13.2-5.9,25.1-17.3,32.1-32.8"/>
+			<path class="st9" d="M433,195.2c11.6-0.8,23.1-1.6,34.7-2.4c6-0.4,12.3-0.8,18,1.8c7.4,3.3,33.3,29.2,37.9,37.4s11,18.7,30,28
+				c6.2,3,26.9,10,36,14.2c1.1,0.5,2.1,1,2.8,1.4c6.4,3.8,9.1,9.6,9.3,15.7c0.4,7.7-3,15.8-7.2,20.7c-2,2.4-16,27-52,20
+				c-21.2-4.1-38.2-8.7-54-14.1c-11-3.8-21.3-7.9-32-12.6"/>
+			<path class="st9" d="M406.5,211c-16.8-0.8-98.2,13.7-115,15c-16.7,1.3-83.4-3.9-98.4-9.1c-15.3-5.2-29.5-13-45.4-16.6
+				c-15.7-3.5-32.1-3.7-48-1.3c-7.3,1.1-14.7,2.8-21.3,6.2c-6.6,3.5-12.1,8.7-17.1,14.1c-19,20.8-36.4,44.4-46.3,71
+				c-1.3,3.4-2.4,6.9-3.4,10.4"/>
+			<path class="st9" d="M128.3,299.5c11.6,3.1,23.3,4.7,35.1,4.8c7.2,0.1,14.7-0.5,21-5.5c1.8-1.4,3.4-3.2,4.5-5.4
+				c1.4-2.6,2-5.9,2.4-9c1.1-8,1-16.4-0.3-24.4c-0.6-3.6-1.4-7.1-2.4-10.5"/>
+			<path class="st9" d="M217.3,335.2c24.8,1.4,49.6,0.7,74.3,0.1c19.3-0.5,38.5-1.1,57.8-1.6"/>
+			<path class="st9" d="M11.5,301c-2.4,5.6-3.9,17.1-4,23c-0.1,6.2,1.6,23.9,2.7,28.8c2.1,9.2,8.2,17.5,16,24.3
+				c7.8,6.8,17.3,12.3,27.1,17.2c4,2,8,3.9,12.1,5.7c2.8,1.2,5.5,2.3,8.4,3.4c12.9,4.9,26.6,8.5,40.6,10.7c2.3,0.4,4.8,0.6,6.8-0.3
+				c2.6-1.2,3.3-4.1,2.5-6.4c-0.8-2.1,1.7-6.7-26.8-21.9c-2.6-1.4-5.5-2.9-8.7-4.5C50.5,362,48,326,56.6,308l1.7-2.9
+				c1.7-2.2,3.8-3.9,6-4.8c2.1-0.8,4.2-0.9,6.4-0.1c1.3,0.5,2.6,1.4,3.8,2.7c5.3,5.5,8.6,11.6,14.9,16.7c15.6,12.4,37,17.2,58.2,19
+				c10.8,0.9,21.7,1.1,32.5,1.4c9.8,0.2,20.3,1,30.1,0.3c4.9-0.4,6.9-2.5,7-5.1c0.1-2-0.9-4.3-2.5-6.3c-0.4-0.5-0.8-0.9-1.2-1.4
+				c-5.1-5.2-12.7-9.1-20.2-11.7c-21-7.3-45.9-5.4-65.1-16.2c-0.1,0-0.1-0.1-0.2-0.1"/>
+			<path class="st9" d="M470.4,241.9c8.4,3.6,17.9,3.7,27,3.8"/>
+			<path class="st9" d="M456.6,305.4c0,0-0.1-0.1-0.1-0.1c-9.3-5.9-20-9.6-31-10.6c-0.4,0-0.8-0.1-1.2-0.1"/>
+		</g>
+	</g>
+</svg>
+
+<hr style="margin-top: -15rem;margin-bottom: 15rem;border-bottom:1rem solid black;">
