--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@ title: home
 ---
 <h1>hey mate</h1>
 
-<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-	 viewBox="0 0 640 640" style="enable-background:new 0 0 640 640;" xml:space="preserve">
+<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 640 640" style="enable-background:new 0 0 640 640;" xml:space="preserve">
 	<style type="text/css">
 		.st0{fill:none;stroke:#000000;stroke-miterlimit:10;}
 		.st1{stroke:#000000;stroke-width:0.5;stroke-linecap:round;stroke-linejoin:round;}
@@ -16,7 +15,7 @@ title: home
 		.st7{fill:#CD1C24;}
 		.st8{opacity:0.5;}
 		.st9{fill:none;stroke:#000000;stroke-linecap:round;stroke-linejoin:round;}
-	</style>
+		</style>
 	<g class="st8 zzz-1">
 		<path class="st2 theme-colour-background" d="M585.5,173.4c-7.5-3.9-16.3-5.4-24.7-4.3c-1.3,0.2-2.7,0.4-3.8,1.3c-1.1,0.8-1.7,2.4-1.1,3.6
 			c0.3,0.6,0.9,1.1,1.5,1.5c8.3,5.6,19.1,5.9,28.6,9.1c1.7,0.6,3.8,1.8,3.4,3.6c-0.3,1.6-2.1,2.2-3.7,2.5
@@ -42,7 +41,7 @@ title: home
 				c-0.1-2-1.9-3.3-3.6-4.1c-4.1-1.8-8.8-2.5-13.1-3.4c-4.4-1-8.9-2-13-4c-1.2-0.6-5-2-3.9-3.8c1-1.8,4.5-1.7,6.3-1.8
 				c4.8-0.3,9.7,0.3,14.3,1.7c2.3,0.7,4.6,1.6,6.7,2.7C586.5,175.6,588,173,586.3,172.1L586.3,172.1z"/>
 		</g>
-	</g>
+		</g>
   <g class="st8 zzz-2">
     <path class="st2 theme-colour-background" d="M585.5,173.4c-7.5-3.9-16.3-5.4-24.7-4.3c-1.3,0.2-2.7,0.4-3.8,1.3c-1.1,0.8-1.7,2.4-1.1,3.6
       c0.3,0.6,0.9,1.1,1.5,1.5c8.3,5.6,19.1,5.9,28.6,9.1c1.7,0.6,3.8,1.8,3.4,3.6c-0.3,1.6-2.1,2.2-3.7,2.5
@@ -68,7 +67,7 @@ title: home
         c-0.1-2-1.9-3.3-3.6-4.1c-4.1-1.8-8.8-2.5-13.1-3.4c-4.4-1-8.9-2-13-4c-1.2-0.6-5-2-3.9-3.8c1-1.8,4.5-1.7,6.3-1.8
         c4.8-0.3,9.7,0.3,14.3,1.7c2.3,0.7,4.6,1.6,6.7,2.7C586.5,175.6,588,173,586.3,172.1L586.3,172.1z"/>
     </g>
-  </g>
+  	</g>
   <g class="st8 zzz-3">
     <path class="st2 theme-colour-background" d="M585.5,173.4c-7.5-3.9-16.3-5.4-24.7-4.3c-1.3,0.2-2.7,0.4-3.8,1.3c-1.1,0.8-1.7,2.4-1.1,3.6
       c0.3,0.6,0.9,1.1,1.5,1.5c8.3,5.6,19.1,5.9,28.6,9.1c1.7,0.6,3.8,1.8,3.4,3.6c-0.3,1.6-2.1,2.2-3.7,2.5
@@ -94,7 +93,7 @@ title: home
         c-0.1-2-1.9-3.3-3.6-4.1c-4.1-1.8-8.8-2.5-13.1-3.4c-4.4-1-8.9-2-13-4c-1.2-0.6-5-2-3.9-3.8c1-1.8,4.5-1.7,6.3-1.8
         c4.8-0.3,9.7,0.3,14.3,1.7c2.3,0.7,4.6,1.6,6.7,2.7C586.5,175.6,588,173,586.3,172.1L586.3,172.1z"/>
     </g>
-  </g>
+  	</g>
 	<g id="XMLID_6_">
 		<g>
 			<path d="M601.7,291.3l-0.7,0c-5.6,0.4-10.2-3-11.3-6.4c-1.1-3.4,0-6.9-0.2-10.4l0.1-0.3c1.1,0.5,2.1,1,2.8,1.4
@@ -161,7 +160,7 @@ title: home
 			<path class="st9" d="M470.4,241.9c8.4,3.6,17.9,3.7,27,3.8"/>
 			<path class="st9" d="M456.6,305.4c0,0-0.1-0.1-0.1-0.1c-9.3-5.9-20-9.6-31-10.6c-0.4,0-0.8-0.1-1.2-0.1"/>
 		</g>
-	</g>
-</svg>
+		</g>
+	</svg>
 
 <hr style="margin-top: -15rem;margin-bottom: 15rem;border-bottom:1rem solid black;">
