--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 title: home
 ---
-<h1>hey mate</h1>
+<h1>hey mate [canary]</h1>
 
 <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 640 640" style="enable-background:new 0 0 640 640;" xml:space="preserve">
 	<style type="text/css">
