replaced katex with mathjax

--- a/work.html
+++ b/work.html
@@ -23,7 +23,7 @@ permalink: /work/
   <a href="{{ site.baseurl}}{{ design.url }}">
     <li class="design-snippet">
       <h2>{{ design.title }}</h2>
-      <p>{{ design.excerpt }}</p>
+      <p>{{ design.subtitle }}</p>
     </li>
     </a>
   {% endfor %}
@@ -35,7 +35,7 @@ permalink: /work/
   <a href="{{ site.baseurl}}{{ otherwork.url }}">
     <li class="other-snippet">
       <h2>{{ otherwork.title }}</h2>
-      <p>{{ otherwork.excerpt }}</p>
+      <p>{{ otherwork.subtitle }}</p>
     </li>
     </a>
   {% endfor %}
